# student-information-system-docker

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANUAL.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
include/: Database.hpp  Logger.hpp  Student.hpp
src/: Database.cpp  Logger.cpp  StudentManager.cpp  main.cpp
